Fixed avatar image and added new buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <div class="head">
-            <img src="/src/img/avatar.png" alt="avatar" class="avatar">
+            <div class="avatar-container">
+                <img src="/src/img/avatar.png" alt="avatar" class="avatar">
+            </div>
             <h1 class="title">TEACHER NAME</h1>
         </div>
     </header>
@@ -21,29 +23,44 @@
     <main>
         <div class="container">
             <div class="buttons">
-                <button class="hover-effect"> 
-                    <img src="/src/img/calendar-heart.svg" alt="calendar" class="vector icon">
-                    <img src="/src/img/calendar-heart-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
-                    <span class="text">Calendar</span>
-                </button>
+                <a href="https://calendar.google.com/calendar/" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/calendar-heart.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/calendar-heart-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Calendar</span>
+                    </button>
+                </a>
+                <a href="https://guri.ceip.edu.uy/" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/guri.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/guri-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Guri</span>
+                    </button>
+                </a>
 
-                <button class="hover-effect"> 
-                    <img src="/src/img/calendar-heart.svg" alt="calendar" class="vector icon">
-                    <img src="/src/img/calendar-heart-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
-                    <span class="text">Calendar</span>
-                </button>
+                <a href="https://app.todoist.com/app/today" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/todo.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/todo-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">To-do list</span>
+                    </button>
+                </a>
 
-                <button class="hover-effect"> 
-                    <img src="/src/img/calendar-heart.svg" alt="calendar" class="vector icon">
-                    <img src="/src/img/calendar-heart-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
-                    <span class="text">Calendar</span>
-                </button>
+                <a href="https://drive.google.com/drive/my-drive" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/google-drive.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/google-drive-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Drive</span>
+                    </button>
+                </a>
 
-                <button class="hover-effect"> 
-                    <img src="/src/img/calendar-heart.svg" alt="calendar" class="vector icon">
-                    <img src="/src/img/calendar-heart-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
-                    <span class="text">Calendar</span>
-                </button>
+                <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/planification.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/planification-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">GPT</span>
+                    </button>
+                </a>
             </div>
         </div>
     </main>
