--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <main>
         <div class="container">
             <div class="buttons">
+                <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/mail.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/mail-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Mail</span>
+                    </button>
+                </a>
+                
                 <a href="https://calendar.google.com/calendar/" target="_blank" rel="noopener noreferrer">
                     <button class="hover-effect">  
                         <img src="/src/img/calendar-heart.svg" alt="calendar" class="vector icon">
@@ -54,11 +62,35 @@
                     </button>
                 </a>
 
+                <a href="https://docs.google.com/" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/google-docs.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/google-docs-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Docs</span>
+                    </button>
+                </a>
+
+                <a href="https://docs.google.com/presentation/" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/google-slides.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/google-slides-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Slides</span>
+                    </button>
+                </a>
+
                 <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
                     <button class="hover-effect">  
                         <img src="/src/img/planification.svg" alt="calendar" class="vector icon">
                         <img src="/src/img/planification-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
                         <span class="text">GPT</span>
+                    </button>
+                </a>
+
+                <a href="https://gemini.google.com/app" target="_blank" rel="noopener noreferrer">
+                    <button class="hover-effect">  
+                        <img src="/src/img/gemini.svg" alt="calendar" class="vector icon">
+                        <img src="/src/img/gemini-hover.svg" alt="calendar_hover" class="vector icon-hover" style="display: none;">
+                        <span class="text">Gemini</span>
                     </button>
                 </a>
             </div>
