--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
             </div>
         </div>
     </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p class="footer-text">Made by <a href="https://github.com/BruMaster7" target="_blank" rel="noopener noreferrer">Bruno Rocha</a></p>
+        </div>
+    
     <script src="/index.js"></script>
 </body>
 </html>
